--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Kids Party</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img id="nav-logo" src="/img/kids-dream-logo.png" alt=""><br>
+                <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
                 <p id="nav-logo-text">Kids Dream Entertaitment</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -31,11 +31,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <img id="nav-icon" class="center-block" src="img/home_icon.png" alt="">
+                            Homepage
+                        </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
+                            <img id="nav-icon" class="center-block" src="img/party.png" alt="">
                             Party Package
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -50,6 +54,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
+                            <img id="nav-icon" class="center-block" src="img/character.png" alt="">
                             Character Package
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -64,6 +69,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
+                            <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                             Corporate Package
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -76,9 +82,11 @@
                         </ul>
                     </li>
                     <li class="nav-item">
+                        <img id="nav-icon" class="center-block" src="img/gallery_icon.png" alt="">
                         <a class="nav-link" href="#">Gallery</a>
                     </li>
                     <li class="nav-item">
+                        <img id="nav-icon" class="center-block" src="img/about_icon.png" alt="">
                         <a class="nav-link" href="#">About Us</a>
                     </li>
                 </ul>
@@ -86,18 +94,18 @@
         </div>
     </nav>
     <div>
-        <img id="slider" src="/img/slider.png" alt="">
+        <img id="slider" src="img/slider.png" alt="">
     </div>
 
 
-    <section style="background: url('/img/pattern-bg.png'); background-size: contain; background-repeat: no-repeat;">
+    <section style="background: url('img/pattern-bg.png'); background-size: contain; background-repeat: no-repeat;">
         <div class="container">
             <h2 class="text-center section-heading">WHAT WE OFFER</h2>
 
             <div class="row my-5">
                 <div class="col-md-6 col-lg-4 my-3 position-relative">
                     <div class="position-absolute d-none d-md-block" style="left: -65px; bottom: -65px; z-index: 99;">
-                        <img src="/img/card-left.png" alt="badge" class="img-fluid" style="height: 130px;" />
+                        <img src="img/card-left.png" alt="badge" class="img-fluid" style="height: 130px;" />
                     </div>
                     <div class="card shadow h-100">
                         <div class="card-body p-5" id="card-left">
@@ -136,7 +144,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 my-3 position-relative">
                     <div class="position-absolute d-none d-md-block" style="right: -65px; bottom: -65px; z-index: 99;">
-                        <img src="/img/card-right.png" alt="badge" class="img-fluid" style="height: 180px;" />
+                        <img src="img/card-right.png" alt="badge" class="img-fluid" style="height: 180px;" />
                     </div>
                     <div class="card shadow h-100">
                         <div class="card-body p-5" id="card-right">
@@ -163,7 +171,7 @@
             <h2 class="text-center section-heading">ABOUT US</h2>
             <div class="row">
                 <div class="col-md-6 text-center">
-                    <img id="about-us-img" src="/img/about-us.png" alt="">
+                    <img id="about-us-img" src="img/about-us.png" alt="">
                 </div>
                 <div class="col-md-6">
                     <div id="about-us-txt">
@@ -196,58 +204,61 @@
             </div>
         </div>
 
-
-        <div class="container">
-            <h2 class="text-center section-heading">BOOK US</h2>
-            <div class="row">
-                <div class="col-md-6 contact-div">
-                    <div class="contact-head">
-                        Contact
-                    </div>
-                    <div>
-                        <table class="contact-table">
-                            <tr style="width: 100%;">
-                                <td style="width: 20%;"><i class="fa-solid fa-phone"></i></td>
-                                <td style="width: 80%;">
-                                    <span style="color: red;">1300 976 750</span> or <span style="color: red;">0433 578
-                                        940</span>
-                                </td>
-                            </tr><br>
-                            <tr style="width: 100%;">
-                                <td style="width: 25%; font-size: 9px;">Weekdays</td>
-                                <td style="width: 75%;">8AM - 6PM</td>
-                            </tr><br>
-                            <tr style="width: 100%;">
-                                <td style="width: 25%;  font-size: 9px;">Weekends</td>
-                                <td style="width: 75%;">9AM - 5PM</td>
-                            </tr><br>
-                        </table>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <form action="#" class="booking-form">
-                        <label for="location">Location</label>
-                        <input type="text" name="location" id="location" placeholder="Where the event will be held">
-                        <label for="date">Date</label>
-                        <input type="text" name="date" id="date" placeholder="Date of the event">
-                        <label for="time">Time</label>
-                        <input type="text" name="time" id="time" placeholder="When will be the party">
-                        <label for="phone">Phone</label>
-                        <input type="text" name="phone" id="phone" placeholder="Your Contact Number">
-                        <div class="text-end">
-                            <button class="button-custom" type="button" id="form-btn">Submit</button>
+        <div id="cloud">
+            <div class="container">
+                <h2 class="text-center section-heading">BOOK US</h2>
+                <div class="row">
+                    <div class="col-md-6 contact-div">
+                        <div class="contact-head">
+                            Contact
                         </div>
-                    </form>
+                        <div>
+                            <table class="contact-table">
+                                <tr style="width: 100%;">
+                                    <td style="width: 20%;"><i class="fa-solid fa-phone"></i></td>
+                                    <td style="width: 80%;">
+                                        <span style="color: red;">1300 976 750</span> or <span style="color: red;">0433
+                                            578
+                                            940</span>
+                                    </td>
+                                </tr><br>
+                                <tr style="width: 100%;">
+                                    <td style="width: 25%; font-size: 9px;">Weekdays</td>
+                                    <td style="width: 75%;">8AM - 6PM</td>
+                                </tr><br>
+                                <tr style="width: 100%;">
+                                    <td style="width: 25%;  font-size: 9px;">Weekends</td>
+                                    <td style="width: 75%;">9AM - 5PM</td>
+                                </tr><br>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <form action="#" class="booking-form">
+                            <label for="location">Location</label>
+                            <input type="text" name="location" id="location" placeholder="Where the event will be held">
+                            <label for="date">Date</label>
+                            <input type="text" name="date" id="date" placeholder="Date of the event">
+                            <label for="time">Time</label>
+                            <input type="text" name="time" id="time" placeholder="When will be the party">
+                            <label for="phone">Phone</label>
+                            <input type="text" name="phone" id="phone" placeholder="Your Contact Number">
+                            <div class="text-end">
+                                <button class="button-custom" type="button" id="form-btn">Submit</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
+        <div>
+            <img id="field" src="img/field.png" alt="">
+        </div>
     </section>
-    <div>
-        <img style="width: 100%;" src="/img/field.png" alt="">
-    </div>
+
     <footer>
         <div class="text-center footer-logo">
-            <img id="nav-logo" src="/img/kids-dream-logo.png" alt=""><br>
+            <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
             <p id="nav-logo-text">Kids Dream Entertaitment</p>
         </div>
         <div class="container">
@@ -268,10 +279,10 @@
 
                 <div class="col-md-4 text-center">
                     <p class="footer-heading">Gallery</p>
-                    <img src="/img/gallery.png" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <img src="/img/gallery2.png" alt=""> <br><br>
-                    <img src="/img/gallery.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <img src="/img/gallery2.png" alt=""> <br>
+                    <img src="img/gallery.png" alt=""> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <img src="img/gallery2.png" alt=""> <br><br>
+                    <img src="img/gallery.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <img src="img/gallery2.png" alt=""> <br>
                 </div>
 
                 <div class="col-md-4 text-end">
