--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </div>
         </div>
 
-        <div id="cloud">
+        <div id="cloud" style="background-image: url(/img/cloud.png);">
             <div class="container">
                 <h2 class="text-center section-heading">BOOK US</h2>
                 <div class="row">
