--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
-                            <img id="nav-icon" class="center-block" src="img/home_icon.png" alt="">
+                        <a class="nav-link active  text-center" aria-current="page" href="#">
+                            <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="nav-icon" class="center-block" src="img/party.png" alt="">
-                            Party Package
+                            Party <br> Package
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Item 1</a></li>
@@ -52,10 +52,10 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="true">
                             <img id="nav-icon" class="center-block" src="img/character.png" alt="">
-                            Character Package
+                            Character <br> Package
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Item 1</a></li>
@@ -67,10 +67,10 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
-                            Corporate Package
+                            Corporate <br> Package
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Item 1</a></li>
@@ -82,12 +82,20 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block" src="img/gallery_icon.png" alt="">
-                        <a class="nav-link" href="#">Gallery</a>
+                        <img id="nav-icon" class="center-block nav-margin" src="img/gallery_icon.png" alt="">
+                        <a class="nav-link  text-center" href="#">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block" src="img/about_icon.png" alt="">
-                        <a class="nav-link" href="#">About Us</a>
+                        <img id="nav-icon" class="center-block nav-margin" src="img/about_icon.png" alt="">
+                        <a class="nav-link  text-center" href="#">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
+                        <a class="nav-link  text-center" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
+                        <a class="nav-link  text-center" href="#">Booking</a>
                     </li>
                 </ul>
             </div>
