--- a/about_us.html
+++ b/about_us.html
@@ -103,40 +103,74 @@
         </div>
     </nav>
     <div class="page-title-background d-flex justify-content-center align-items-center">
-        <div class="page-title"><br> Gallery</div>
+        <div class="page-title"><br> About Us</div>
     </div>
     <div class="container main-body">
         <div class="row">
-            <div class="col-md-6">
-                <div class="img-card"><img src="img/galleryX.png" alt=""></div>
+            <div class="col-md-4 ">
+                <img class="center-block" src="img/about_us_1.png" style="width: 60%;" alt="">
             </div>
-            <div class="col-md-3">
-                <div class="img-card"><img src="img/galleryX.png" alt=""></div><br>
-                <div class="img-card"><img src="img/galleryX.png" alt=""></div>
+            <div class="col-md-8"><br>
+                The journey begins in 2008 with the magical ambition to explore the dreamland of kids on earth. <br><br>
+
+                We started with the two paint brushes holding by two wonderful people with the goal to bright up every
+                faces through face painting, the Creative creation of such people led the Kids Dream to this far in the
+                magical land. <br><br>
+                We started with the two paint brushes holding by two wonderful people with the goal to bright up every
+                faces through face painting, the Creative creation of such people led the Kids Dream to this far in the
+                magical land.
             </div>
-            <div class="col-md-3">
-                <div class="img-card"><img src="img/galleryX.png" alt=""></div><br>
-                <div class="img-card"><img src="img/galleryX.png" alt=""></div>
-            </div>
-        </div>
+        </div><br><br>
         <div class="row">
-            <div class="col-md-3">
-                <div class="img-card"><img src="img/galleryX.png" alt=""></div>
-            </div>
-            <div class="col-md-3">
-                <div class="img-card"><img src="img/galleryX.png" alt=""></div>
-            </div>
-            <div class="col-md-3">
-                <div class="img-card"><img src="img/galleryX.png" alt=""></div>
-            </div>
-            <div class="col-md-3">
-                <div class="img-card"><img src="img/galleryX.png" alt=""></div>
-            </div>
-        </div>
-    </div>
+            <div class="col-md-8">
+                <br><br>
+                Now we offering Balloon Twisting, Magic show and much more magical entertainment to bright up with loads
+                of fun to any kinds of event such as personal events to corporate events, Birthday and Opening
+                ceremonies. <br><br>
 
-    <br><br><br><br>
+                Face painting <br>
+                Balloon sculpting<br>
+                Games<br>
+                Music activity<br>
+                Kids Magic Show<br>
+                Pamper parties<br>
+                Henna Tattoo<br>
+                Sports game activity to all kinds of events.<br><br>
 
+                Including Children parties, Community events, and Sports event.<br>
+            </div>
+            <div class="col-md-4 "><br><br>
+                <img class="center-block" src="img/about_us_2.png" style="width: 80%;" alt="">
+            </div>
+        </div><br><br>
+        <div class="row">
+            <div class="col-md-4 ">
+                <img class="center-block" src="img/about_us_3.png" style="width: 60%;" alt="">
+            </div>
+            <div class="col-md-8"><br><br><br>
+                We are not the outlaw in the Magical Land of Earth, rather we are the responsible team with our effort
+                and equipment for our works. We use the best in the market materials for our face painting and skin
+                related materials.
+            </div>
+        </div><br><br>
+        <div class="row">
+            <div class="col-md-8">
+                <br><br>
+                Under one umbrella, you will find face painter, balloon Twister, Magician, costume Entertainer, Henna
+                Artist, and Event Planner.
+                <br><br>
+                You are Only one call away to this number
+                <br><br>
+                1300 976 750
+                <br><br>
+                We wish to be the part of an amazing event for you and your Kids while you can sit back and relax
+                enjoying the show.
+            </div>
+            <div class="col-md-4 "><br><br>
+                <img class="center-block" src="img/about_us_2.png" style="width: 60%;" alt="">
+            </div>
+        </div><br><br>
+    </div><br><br>
     <div>
         <img id="field" src="img/field.png" alt="">
     </div>
