--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
                 <p id="nav-logo-text">Kids Dream Entertaitment</p>
             </a>
@@ -31,28 +31,28 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active  text-center" aria-current="page" href="#">
+                        <a class="nav-link active  text-center" aria-current="page" href="/">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-center" href="/party_packages.html" id="navbarDropdown"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="nav-icon" class="center-block" src="img/party.png" alt="">
                             Party <br> Package
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Item 1</a></li>
-                            <li><a class="dropdown-item" href="#">Item 2</a></li>
+                            <li><a class="dropdown-item" href="/party_packages.html">Party Packages</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Item 3</a></li>
+                            <li><a class="dropdown-item" href="/face_painting.html">Face Painting & temporary Tattoo</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle text-center" href="/" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="true">
                             <img id="nav-icon" class="center-block" src="img/character.png" alt="">
                             Character <br> Package
@@ -67,7 +67,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle text-center" href="/" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                             Corporate <br> Package
@@ -82,20 +82,28 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block nav-margin" src="img/gallery_icon.png" alt="">
-                        <a class="nav-link  text-center" href="#">Gallery</a>
+                        <a class="nav-link  text-center" href="/gallery.html">
+                            <img id="nav-icon" class="center-block nav-margin" src="img/gallery_icon.png" alt="">
+                            Gallery
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block nav-margin" src="img/about_icon.png" alt="">
-                        <a class="nav-link  text-center" href="#">About Us</a>
+                        <a class="nav-link  text-center" href="/about_us.html">
+                            <img id="nav-icon" class="center-block nav-margin" src="img/about_icon.png" alt="">
+                            About Us
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
-                        <a class="nav-link  text-center" href="#">Contact</a>
+                        <a class="nav-link  text-center" href="/contact_us.html">
+                            <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
+                            Contact
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
-                        <a class="nav-link  text-center" href="#">Booking</a>
+                        <a class="nav-link  text-center" href="/book_us.html">
+                            <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
+                            Booking
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -115,7 +123,7 @@
                     <div class="position-absolute d-none d-md-block" style="left: -65px; bottom: -65px; z-index: 99;">
                         <img src="img/card-left.png" alt="badge" class="img-fluid" style="height: 130px;" />
                     </div>
-                    <div class="card shadow h-100">
+                    <div class="cardX shadow h-100">
                         <div class="card-body p-5" id="card-left">
                             <div class="card-text">
                                 <h4 class="text-center card-heading">Party Package</h4><br>
@@ -131,7 +139,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 my-3">
-                    <div class="card shadow h-100">
+                    <div class="cardX shadow h-100">
                         <div class="card-body p-5" id="card-middle">
                             <div class="card-text">
                                 <h4 class="text-center card-heading">Character Package</h4><br>
@@ -154,7 +162,7 @@
                     <div class="position-absolute d-none d-md-block" style="right: -65px; bottom: -65px; z-index: 99;">
                         <img src="img/card-right.png" alt="badge" class="img-fluid" style="height: 180px;" />
                     </div>
-                    <div class="card shadow h-100">
+                    <div class="cardX shadow h-100">
                         <div class="card-body p-5" id="card-right">
                             <div class="card-text">
                                 <h4 class="text-center card-heading">Party Package</h4><br>
