--- a/party_packages.html
+++ b/party_packages.html
@@ -103,13 +103,10 @@
         </div>
     </nav>
 
-    <div>
-        <img id="slider" src="img/topbanner.png" alt="">
+    <div class="page-title-background d-flex justify-content-center align-items-center">
+        <div class="page-title"><br>Party Packages</div>
     </div>
     <div class="container main-body">
-        <div class="page-title">
-            Party Packages
-        </div>
         <div class="row">
             <div class="col" id="row-1">
                 <div class="card">
