--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="/book_us.html">
+                        <a class="nav-link  text-center" href="./book_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
                             Booking
                         </a>
