--- a/index.html
+++ b/index.html
@@ -31,28 +31,29 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active  text-center" aria-current="page" href="/">
+                        <a class="nav-link active  text-center" aria-current="page" href="./">
                             <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="/party_packages.html" id="navbarDropdown"
+                        <a class="nav-link dropdown-toggle text-center" href="./party_packages.html" id="navbarDropdown"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="nav-icon" class="center-block" src="img/party.png" alt="">
                             Party <br> Package
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="/party_packages.html">Party Packages</a></li>
+                            <li><a class="dropdown-item" href="./party_packages.html">Party Packages</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="/face_painting.html">Face Painting & temporary Tattoo</a>
+                            <li><a class="dropdown-item" href="./face_painting.html">Face Painting & temporary
+                                    Tattoo</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="/" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle text-center" href="./" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="true">
                             <img id="nav-icon" class="center-block" src="img/character.png" alt="">
                             Character <br> Package
@@ -67,7 +68,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="/" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle text-center" href="./" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                             Corporate <br> Package
@@ -82,19 +83,19 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="/gallery.html">
+                        <a class="nav-link  text-center" href="./gallery.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/gallery_icon.png" alt="">
                             Gallery
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="/about_us.html">
+                        <a class="nav-link  text-center" href="./about_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/about_icon.png" alt="">
                             About Us
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-center" href="/contact_us.html">
+                        <a class="nav-link  text-center" href="./contact_us.html">
                             <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
                             Contact
                         </a>
