--- a/book_us.html
+++ b/book_us.html
@@ -102,7 +102,8 @@
             </div>
         </div>
     </nav>
-    <div class="page-title-background d-flex justify-content-center align-items-center">
+    <div class="page-title-background d-flex justify-content-center align-items-center"
+        style="background: url('img/topbanner.png');">
         <div class="page-title"><br> Book Us</div>
     </div>
 
