--- a/gallery.html
+++ b/gallery.html
@@ -102,7 +102,8 @@
             </div>
         </div>
     </nav>
-    <div class="page-title-background d-flex justify-content-center align-items-center">
+    <div class="page-title-background d-flex justify-content-center align-items-center"
+        style="background: url('img/topbanner.png');">
         <div class="page-title"><br> Gallery</div>
     </div>
     <div class="container main-body">
