--- a/party_packages.html
+++ b/party_packages.html
@@ -103,7 +103,8 @@
         </div>
     </nav>
 
-    <div class="page-title-background d-flex justify-content-center align-items-center">
+    <div class="page-title-background d-flex justify-content-center align-items-center"
+        style="background: url('img/topbanner.png');">
         <div class="page-title"><br>Party Packages</div>
     </div>
     <div class="container main-body">
