--- a/face_painting.html
+++ b/face_painting.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="./">
                 <img id="nav-logo" src="img/kids-dream-logo.png" alt=""><br>
                 <p id="nav-logo-text">Kids Dream Entertaitment</p>
             </a>
@@ -31,29 +31,29 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-center" aria-current="page" href="#">
-                            <img id="nav-icon" class="center-block" style="margin-top: 5px;" src="img/home_icon.png"
-                                alt="">
+                        <a class="nav-link  text-center" aria-current="page" href="./">
+                            <img id="nav-icon" class="center-block  nav-margin" src="img/home_icon.png" alt="">
                             Homepage
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active text-center" href="#" id="navbarDropdown"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link active dropdown-toggle text-center" href="./party_packages.html"
+                            id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="nav-icon" class="center-block" src="img/party.png" alt="">
                             Party <br> Package
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Item 1</a></li>
-                            <li><a class="dropdown-item" href="#">Item 2</a></li>
+                            <li><a class="dropdown-item" href="./party_packages.html">Party Packages</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Item 3</a></li>
+                            <li><a class="dropdown-item" href="./face_painting.html">Face Painting & temporary
+                                    Tattoo</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle text-center" href="./" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="true">
                             <img id="nav-icon" class="center-block" src="img/character.png" alt="">
                             Character <br> Package
@@ -68,7 +68,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle text-center" href="./" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img id="nav-icon" class="center-block" src="img/corporate.png" alt="">
                             Corporate <br> Package
@@ -83,20 +83,28 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block nav-margin" src="img/gallery_icon.png" alt="">
-                        <a class="nav-link  text-center" href="#">Gallery</a>
+                        <a class="nav-link  text-center" href="./gallery.html">
+                            <img id="nav-icon" class="center-block nav-margin" src="img/gallery_icon.png" alt="">
+                            Gallery
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block nav-margin" src="img/about_icon.png" alt="">
-                        <a class="nav-link  text-center" href="#">About Us</a>
+                        <a class="nav-link  text-center" href="./about_us.html">
+                            <img id="nav-icon" class="center-block nav-margin" src="img/about_icon.png" alt="">
+                            About Us
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
-                        <a class="nav-link  text-center" href="#">Contact</a>
+                        <a class="nav-link  text-center" href="./contact_us.html">
+                            <img id="nav-icon" class="center-block nav-margin" src="img/contact_icon.png" alt="">
+                            Contact
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
-                        <a class="nav-link  text-center" href="#">Booking</a>
+                        <a class="nav-link  text-center" href="./book_us.html">
+                            <img id="nav-icon" class="center-block nav-margin" src="img/booking_icon.png" alt="">
+                            Booking
+                        </a>
                     </li>
                 </ul>
             </div>
