--- a/face_painting.html
+++ b/face_painting.html
@@ -119,14 +119,73 @@
         <div class="row">
             <div class="col" id="row-1">
                 <div class="card">
-                    <div class="catagory_title text-center">Catagories</div>
-                    <div class="catagory_list">
-                        <ul style="list-style-type:circle">
-                            <li>Party Packages</li>
-                            <li>Character Packages</li>
-                            <li>Corporate packages</li>
-                        </ul>
-                    </div>
+                    <form action="#">
+                        <div class="catagory_title text-center">Catagories</div>
+                        <div class="catagory_list">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1" checked>
+                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
+                                    Party Packages
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Character Packages
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Corporate packages
+                                </label>
+                            </div>
+                        </div><br><br>
+                        <div class="catagory_title text-center">Packages</div>
+                        <div class="catagory_list">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1" checked>
+                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
+                                    Face Painting and Temporary Tatto
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Balloon Sculpting
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Mascot Package
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Henna Tattoo
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadiosX" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Jumping Castle
+                                </label>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button-custom-small" type="button" id="form-btn">Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="col-md-9" id="row-2">
