--- a/party_packages.html
+++ b/party_packages.html
@@ -119,24 +119,47 @@
         <div class="row">
             <div class="col" id="row-1">
                 <div class="card">
-                    <div class="catagory_title text-center">Catagories</div>
-                    <div class="catagory_list">
-                        <ul style="list-style-type:circle">
-                            <li>Party Packages</li>
-                            <li>Character Packages</li>
-                            <li>Corporate packages</li>
-                        </ul>
-                    </div>
+                    <form action="#">
+                        <div class="catagory_title text-center">Catagories</div>
+                        <div class="catagory_list">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1" checked>
+                                <label class="form-check-label" for="exampleRadios1" style="color: blue;">
+                                    Party Packages
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Character Packages
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1">
+                                <label class="form-check-label" for="exampleRadios1">
+                                    Corporate packages
+                                </label>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button-custom-small" type="button" id="form-btn">Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="col-md-9" id="row-2">
                 <div class="card">
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="img-card">
-                                <img src="img/face_paint.png" alt="">
-                                <div class="img-title">Face Painting & Temporary Tattoo</div>
-                            </div>
+                            <a href="./face_painting.html">
+                                <div class="img-card">
+                                    <img src="img/face_paint.png" alt="">
+                                    <div class="img-title">Face Painting & Temporary Tattoo</div>
+                                </div>
+                            </a>
                         </div>
                         <div class="col-md-4">
                             <div class="img-card">
